--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.17.0",
     "debounce": "^1.2.0",
     "gray-matter": "^4.0.2",
