--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-loader-spinner": "^4.0.0",
     "react-minimal-pie-chart": "^8.1.0",
+    "react-webcam": "^5.2.3",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0"
   },
